fix: fix main-header z-index

--- a/css/style.css
+++ b/css/style.css
@@ -96,6 +96,7 @@ section,
   top: 0;
   left: 0;
   right: 0;
+  z-index: 10;
 }
 
 #main-header > .container {
